Fixed scroll bar overflow issue

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -190,6 +190,7 @@ body {
 
 .footerSpace {
     height: 55px;
+    margin-bottom: 55px;
 }
 
 .subSideAction {
